# iot_microphone_project

./: .gitignore  CMakeLists.txt  main.cpp
include/: clock.hpp  microphone.hpp  microsd.hpp  recorder.hpp  wav.hpp
lib/: CMakeLists.txt
lib/microphone/: CMakeLists.txt  DEV_Config.c  microphone.cpp  microphone.hpp
lib/microphone/include/: microphone.hpp
lib/microsd/: CMakeLists.txt  hw_config.c  microsd.cpp  microsd.hpp
lib/microsd/include/: microsd.hpp
src/: CMakeLists.txt  microsd.cpp  recorder.cpp
